[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "env-vault"
version = "0.1.0"
description = "Encrypted .env file manager — encrypt, decrypt, and manage environment secrets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Nripanka Das"}]
dependencies = ["click>=8.0", "cryptography>=41.0"]

[project.scripts]
env-vault = "env_vault.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
